# w2v

./: README.md  pyproject.toml
src/w2v/: __init__.py  cli.py  decode.py  generate.py  ngram.py  plot_embeds.py  plot_target_distro.py
