[project]
name = "w2v"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "simo", email = "svm.zhang@gmail.com" }
]
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "type-extensions>=0.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/w2v"]
